<resources>
    <string name="app_name">LASU STAFF CORNER</string>
    <string name="lasustaff_string">LASU STAFF</string>
    <string name="corner_string">CORNER</string>
    <string name="great_lasu_string">Professor I.I.Olatunji-Bello mni, fnli, NPOM</string>
    <string name="hurrah_string">welcomes you!</string>
    <string name="get_started">Get Started</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="lasu_law">LASU LAW</string>
    <string name="hint_password"><font size="50">........</font></string>
    <string name="hint_email"><font size="15">oluwatoyin.enikuomehin@lasu.edu.ng</font></string>
    <string name="hint_username"><font size="15">OluwatoyinEni</font></string>
    <string name="txt_signin">Sign in</string>
    <string name="txt_signup">Sign up</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_acct">Create an account to continue</string>
    <string name="agree">By creating an account, you agree to our</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="already_have_an_acct">Already have an account?</string>
    <string name="txt_lasu_law">LASU LAW</string>
    <string name="txt_cos">Condition of Service</string>
    <string name="txt_fp">Financial Policy</string>
    <string name="txt_pg">Promotion Guildlines</string>
    <string name="txt_exam">Exam Policy</string>
    <string name="txt_lasg">LASG Public Service</string>
    <string name="txt_faculty">Faculty and Departments</string>
    <string name="txt_council">Governing Council and Management Staff</string>
    <string name="txt_constitution">Nigerian Constitution</string>
    <string name="txt_act">Procurement Act</string>
    <string name="txt_info">LASU INFO</string>
    <string name="txt_ict">ICT Releases</string>
    <string name="vc_welcome_address">
        <![CDATA[<p>It is my distinct honor and privilege to welcome you to the LASU STAFF CORNER, the official Staff APP of our esteemed University. As the Vice Chancellor, I am delighted to extend my warmest greetings to all those who have embarked upon this journey of knowledge, discovery, and endless possibilities with us.</p>
        <br><p>This APP serves as a virtual gateway to our vibrant academic community, offering a window into the heart and soul of our institution. Here, you will find information and resources that embody our policies and operational principles as approved by Law and as entrenched in our commitment to excellence in education, research, and community engagement.</p>
        <br><p>As you navigate through these digital pages, you will uncover a wealth of knowledge that embodies the foundation of our University, the State, and the Country at large. From the LAW establishing the University to the Condition of Service for both Senior and Junior Staff members, we have covered a range of resources that give us a better footage as staff members of the University.</p>
        <br><p>In this CORNER, you will also be able to report issues around you even as you get regular updates from the University.</p>
        <br><p>This solution further encapsulates the essence of our university\'s pursuit of intellectual growth, openness, and innovation.</p>
        <br><p>As we embark on this digital journey together, I encourage each and every one of you to actively engage with the LASU CORNER, get updates, and contribute to its growth.</p>
        <br><p>Welcome to our university\'s digital world, where possibilities know no bounds.</p>
        <br><p>We are LASU, we are great.</p>
        <br><b>Prof. Ibiyemi I. Olatunji-Bello mni, fnli, NPOM</b>
        <p>Vice Chancellor</p><br><br><br><br>.
        ]]>
    </string>
    <string name="abt_text_constitution_of_nigeria">
        <![CDATA[
        <b>1999 CONSTITUTION OF THE FEDERAL REPUBLIC OF NIGERIA</b>
        <br><p>In Nigeria, the 1999 constitution supersedes all other laws, including State laws passed by the House of Assembly and Acts of the National Assembly. It is the supreme law in the nation through which all other laws derive theirs power, legitimacy and must submit to. The law is binding on all citizens of the nation and serves as a legal compass for institutional and individual behaviour within the country.</p>
        <p>The 1999 constitution makes provision for economic policy, political objectives, social objectives, foreign policy objectives, educational objectives, environmental objectives, guidelines for Nigerian culture, obligation of the Mass media, National ethics, rights and duties of citizen. It is expected that the contents of the constitution will instill some measure of accountability and discipline in the conduct of political leaders.</p>
        ]]>
    </string>
    <string name="abt_text_cos">
        <![CDATA[
        <p>The Lagos State University Conditions of Service contains rules, rights, requirements, and policies that govern the relationship between the University and its staff. It is a document that guides the conduct of staff and prescribes the responsibilities of the staff to the University and vice versa.</p>

        ]]>
    </string>
</resources>