<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

    <Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="VC's Welcome Page"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="25dp"
        app:backgroundTint="@color/blue_btn_color"
        android:drawableEnd="@drawable/ic_arrow_vector"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        android:layout_marginEnd="16dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="196dp"
        android:src="@drawable/vc_image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/great_lasu_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans"
        android:text="@string/hurrah_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_get"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/get_started"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_btn_color"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.496"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>